Another try at sonar.