@@ -65,7 +65,7 @@
     <orbit-site>http://download.eclipse.org/tools/orbit/downloads/drops/R20120526062928/repository</orbit-site>
     <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
     <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-    <!--sonar.jacoco.reportPath>../target/jacoco.exec</sonar.jacoco.reportPath-->
+    <sonar.jacoco.itReportPath>${project.basedir}/../../target/jacoco-it.exec</sonar.jacoco.itReportPath>
   </properties>
   <pluginRepositories>
     <pluginRepository>
@@ -214,17 +214,25 @@
         <version>0.6.0.201210061924</version>
         <executions>
           <execution>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-            <configuration>
+           <id>pre-test</id>
+           <goals>
+             <goal>prepare-agent</goal>
+           </goals>
+	   <configuration>
               <!-- Where to put jacoco coverage report -->
-              <!--destFile>${sonar.jacoco.reportPath}</destFile-->
+              <destFile>${sonar.jacoco.itReportPath}</destFile> 
               <includes>
                 <include>org.eclipse.linuxtools.*</include>
               </includes>
               <append>true</append>
             </configuration>
+          </execution>
+          <execution>
+            <id>post-test</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
           </execution>
         </executions>
       </plugin>
@@ -254,7 +262,6 @@
                </dependency>
             </dependencies>
             <product>org.eclipse.sdk.ide</product>
-	    <argLine>-Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -Dorg.eclipse.swt.browser.UseWebKitGTK=true</argLine>
 	  </configuration>
 	</plugin>
         <plugin>
